[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7.1"
tokio = { version = "1.34.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5.0", features = ["cors"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
